...
                            <constraint firstItem="owM-sc-DNQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="NWJ-Wz-p1e"/>
                            <constraint firstItem="owM-sc-DNQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ekJ-ma-lmo"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="owM-sc-DNQ" secondAttribute="trailing" id="ic7-7A-D4m"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="py5-tq-mit">
                        <barButtonItem key="rightBarButtonItem" title="Item" id="0gc-QK-15L">
                            <connections>
                                <action selector="addClicked:" destination="BYZ-38-t0r" id="WCf-NU-HNy"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
